--- a/Lab8_/Views/Login/GetAllUsers.cshtml
+++ b/Lab8_/Views/Login/GetAllUsers.cshtml
@@ -5,9 +5,9 @@
 @foreach (var item in Model)
 {
   <div class="text-center">
-      <p> Name:@item.Name <br>
-          Age:@item.Age <br>
-          Email:@item.Email <br></p> 
+      <p> Name: <strong>@item.Name</strong> <br>
+          Age: <strong>@item.Age</strong> <br>
+          Email: <strong>@item.Email</strong> <br></p> 
 </div>  
 }
 
