--- a/Lab8_/Views/Shop/AddForm.cshtml
+++ b/Lab8_/Views/Shop/AddForm.cshtml
@@ -5,6 +5,8 @@
 <div class="text-center">
     <div style="text-align: left">
     <form asp-controller="Shop" asp-action="AddClothes" method="post">
+
+          Id:            <input name="id" /><br />
           Name:            <input name="name" /><br />
           Type:             <input name="type" /><br />
           Cost:          <input name="cost" /><br />
