--- a/Lab8_/Views/Shop/GetAllClothes.cshtml
+++ b/Lab8_/Views/Shop/GetAllClothes.cshtml
@@ -7,6 +7,7 @@
 <table border="1" style="border-collapse: collapse; width: 100%;">
     <tbody>
         <tr style="border: 1px solid black;">
+         <td style="border: 1px solid black;"> <strong>Id</strong> </td>
          <td style="border: 1px solid black;"> <strong>Name</strong> </td>
          <td style="border: 1px solid black;"> <strong>Type</strong> </td>
          <td style="border: 1px solid black;"> <strong>Cost</strong> </td>
@@ -14,6 +15,7 @@
 @foreach (var item in Model)
 {
     <tr style="border: 1px solid black;">
+         <td style="border: 1px solid black;"> @item.Id </td>
          <td style="border: 1px solid black;"> @item.Name </td>
          <td style="border: 1px solid black;"> @item.Type </td>
          <td style="border: 1px solid black;"> @item.Cost </td>
